crates/rustledger/tests/snapshots/cli_snapshot_test__check_clean_json.snap
---
source: crates/rustledger/tests/cli_snapshot_test.rs
expression: pretty
---
{
  "diagnostics": [
    {
      "code": "E1004",
      "column": 1,
      "end_column": 1,
      "end_line": 1,
      "file": "<fixtures>/valid-ledger.beancount",
      "line": 1,
      "message": "[E1004] Cannot close account Assets:Bank:Savings with non-zero balance",
      "phase": "validate",
      "severity": "warning"
    }
  ],
  "error_count": 0,
  "parse_error_count": 0,
  "validate_error_count": 0,
  "warning_count": 1
}
