crates/rustledger/tests/snapshots/cli_snapshot_test__check_clean_text.snap
---
source: crates/rustledger/tests/cli_snapshot_test.rs
expression: normalized.trim()
---
<fixtures>/valid-ledger.beancount: error[E1004]: [E1004] Cannot close account Assets:Bank:Savings with non-zero balance
⚠ 1 warning
