crates/rustledger/tests/snapshots/cli_snapshot_test__check_validation_errors_json.snap
---
source: crates/rustledger/tests/cli_snapshot_test.rs
expression: pretty
---
{
  "diagnostics": [
    {
      "code": "E1001",
      "column": 1,
      "end_column": 1,
      "end_line": 1,
      "file": "<fixtures>/validation-errors.beancount",
      "line": 1,
      "message": "[E1001] Account Expenses:Food was never opened",
      "phase": "validate",
      "severity": "error"
    },
    {
      "code": "E1001",
      "column": 1,
      "end_column": 1,
      "end_line": 1,
      "file": "<fixtures>/validation-errors.beancount",
      "line": 1,
      "message": "[E1001] Account Assets:Cash was never opened",
      "phase": "validate",
      "severity": "error"
    },
    {
      "code": "E1001",
      "column": 1,
      "end_column": 1,
      "end_line": 1,
      "file": "<fixtures>/validation-errors.beancount",
      "line": 1,
      "message": "[E1001] Account Assets:Cash was never opened",
      "phase": "validate",
      "severity": "error"
    }
  ],
  "error_count": 3,
  "parse_error_count": 0,
  "validate_error_count": 3,
  "warning_count": 0
}
