crates/rustledger/tests/snapshots/cli_snapshot_test__check_validation_errors_text.snap
---
source: crates/rustledger/tests/cli_snapshot_test.rs
expression: normalized.trim()
---
<fixtures>/validation-errors.beancount: error[E1001]: [E1001] Account Expenses:Food was never opened
<fixtures>/validation-errors.beancount: error[E1001]: [E1001] Account Assets:Cash was never opened
<fixtures>/validation-errors.beancount: error[E1001]: [E1001] Account Assets:Cash was never opened
✗ 3 errors
