crates/rustledger/tests/snapshots/cli_snapshot_test__query_aggregate_output.snap
---
source: crates/rustledger/tests/cli_snapshot_test.rs
expression: stdout.trim()
---
account        SUM      
-------------  ---------
Assets:Cash    2920 USD 
Expenses:Food  80 USD   
Income:Salary  -3000 USD

3 row(s)
